--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -10,8 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d47a4e34-e2ce-4801-990e-9dfc1c646f2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Loading the relevant R package:\n",
+    "library(tidyverse)\n",
+    "library(tidymodels)\n",
+    "library(repr)\n",
+    "library(themis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "067fb7cc-4696-40e0-90c2-5ccef14380e7",
    "metadata": {},
    "outputs": [],
    "source": []
