--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -661,7 +661,7 @@
     "                   filter(!is.na(Age))|>\n",
     "                   mutate(subscribe = as.factor(subscribe))\n",
     "\n",
-    "players_cleaned"
+    "head(players_cleaned)"
    ]
   },
   {
