fixed filter error

--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -766,7 +766,7 @@
     "accuracy\n",
     "\n",
     "best_k_val<- filter(accuracy, mean==max(mean)) |>\n",
-    "filter(neighbors = min(neighbors))|>\n",
+    "filter(neighbors == min(neighbors))|>\n",
     "pull(neighbors)\n",
     "\n",
     "best_k_val"
