Added methods and plan

--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -262,7 +262,7 @@
    "id": "19d7f698-77e1-4905-9c66-194db122cddd",
    "metadata": {},
    "source": [
-    "### Method and Results"
+    "### Data Wrangling and Exploratory Visualization"
    ]
   },
   {
@@ -1377,6 +1377,30 @@
     "                        labs(x = \"Subscription Status\", y = \"Game Played Hours\", fill = \"Subscription\\nStatus\", title = \"played hours vs. Subscription Status\")+\n",
     "                        theme(text = element_text(size = 15))\n",
     "played_hours_boxplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2512bc9-31ec-426b-8cd9-06be6ab4a1e3",
+   "metadata": {},
+   "source": [
+    "### Methods and Plan\n",
+    "#### Method to use: Classification by K-nearest neighbors (KNN) classification algorithms\n",
+    "Why choose this method?\n",
+    "\n",
+    "- Classification is appropriate for this predictive question as the question requires using given data on `played_hours` and `Age` to determine the class `subscribe` of a new sample.\n",
+    "- KNN classification algorithm does not require specific data or shape assumptions for the algorithm to perform well, since it is based on how close a new sample is to nearby points.\n",
+    "\n",
+    "Model Application:\n",
+    "\n",
+    "- Model comparison and selection will be done through cross-validation.\n",
+    "- The function `initial_split()` was used to split the dataframe into 75% training and 25% testing data, stratifying for `subscribe`. The data need to be splitted before applying KNN analysis so the testing data will be \"untouched\". \n",
+    "- Cross-validation will be used to asses the model's performance. The k-folds will likely be 5, or 10-folds as higher k-folds increase cost. Additionally, tuning the model to determine the best K value will help maximize the accuracy of the classifier on new observations.  \n",
+    "\n",
+    "Potential Limitations:\n",
+    "\n",
+    "- KNN is very sensitive to scaling. If the ranges of values for `played_hours` and `Age` differ by a lot, biased neighbors will be chosen due to biased Euclidean distance, thus resulting in inaccurate prediction.\n",
+    "- Imbalance. If there are a lot more subscribed observations than unsubscribed, KNN will more likely to classify any new observations as subscribe, which is inaccurate.\n"
    ]
   },
   {
