--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -262,7 +262,7 @@
    "id": "19d7f698-77e1-4905-9c66-194db122cddd",
    "metadata": {},
    "source": [
-    "### Data Wrangling and Exploratory Visualization"
+    "### Data Preprocessing and Exploratory Visualization"
    ]
   },
   {
