added random change

--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -250,7 +250,7 @@
     "|`played_hours`|double|The number of hours played by the player (hours)|0|Max = 1.72733e+12,   Min = 1.7124e+12,   Mean = 1.719201e+12,   Median = 1.7192e+12, Standard Deviation = 3557491589 |\n",
     "|`name`|character|The player’s name|0|N/A|\n",
     "|`gender`|character|The player’s gender (male, female, non-binary, agender, two-spirited, prefer not to say, other)|0|N/A|\n",
-    "|`age`|double|The player’s age (years)|2|Max = 50, Min = 8, Mean = 20.52062, Median = 19, Standard Deviation = 3552813134|\n",
+    "|`age`|double|The player’s age (years)|2|Max = 50, Min = 8, Mean = 20.52062, Median = 19, Mode = Standard Deviation = 3552813134|\n",
     "\n",
     "**ISSUES:** \n",
     "- There are few visible issues, other than the 2 observations with missing data for both the `end_time` and `original_end_time` variable, which will need to be dealt with during later wrangling/processing.\n",
