summary statistics interpretation

--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "c7a1465f-f8f6-4de8-ae1b-95cca3e8eefe",
    "metadata": {},
    "outputs": [
@@ -386,39 +386,39 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 1 × 7</caption>\n",
+       "<caption>A tibble: 1 × 8</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>min_played_hours</th><th scope=col>max_played_hours</th><th scope=col>average_played_hours</th><th scope=col>min_age</th><th scope=col>max_age</th><th scope=col>median_age</th><th scope=col>average_age</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>min_played_hours</th><th scope=col>max_played_hours</th><th scope=col>average_played_hours</th><th scope=col>min_age</th><th scope=col>max_age</th><th scope=col>median_age</th><th scope=col>mode_age</th><th scope=col>average_age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>0</td><td>223.1</td><td>5.904639</td><td>8</td><td>50</td><td>19</td><td>20.52062</td></tr>\n",
+       "\t<tr><td>0</td><td>223.1</td><td>5.904639</td><td>8</td><td>50</td><td>19</td><td>17</td><td>20.52062</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 1 × 7\n",
-       "\\begin{tabular}{lllllll}\n",
-       " min\\_played\\_hours & max\\_played\\_hours & average\\_played\\_hours & min\\_age & max\\_age & median\\_age & average\\_age\\\\\n",
-       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "A tibble: 1 × 8\n",
+       "\\begin{tabular}{llllllll}\n",
+       " min\\_played\\_hours & max\\_played\\_hours & average\\_played\\_hours & min\\_age & max\\_age & median\\_age & mode\\_age & average\\_age\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t 0 & 223.1 & 5.904639 & 8 & 50 & 19 & 20.52062\\\\\n",
+       "\t 0 & 223.1 & 5.904639 & 8 & 50 & 19 & 17 & 20.52062\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 1 × 7\n",
+       "A tibble: 1 × 8\n",
        "\n",
-       "| min_played_hours &lt;dbl&gt; | max_played_hours &lt;dbl&gt; | average_played_hours &lt;dbl&gt; | min_age &lt;dbl&gt; | max_age &lt;dbl&gt; | median_age &lt;dbl&gt; | average_age &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|---|---|\n",
-       "| 0 | 223.1 | 5.904639 | 8 | 50 | 19 | 20.52062 |\n",
+       "| min_played_hours &lt;dbl&gt; | max_played_hours &lt;dbl&gt; | average_played_hours &lt;dbl&gt; | min_age &lt;dbl&gt; | max_age &lt;dbl&gt; | median_age &lt;dbl&gt; | mode_age &lt;chr&gt; | average_age &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| 0 | 223.1 | 5.904639 | 8 | 50 | 19 | 17 | 20.52062 |\n",
        "\n"
       ],
       "text/plain": [
        "  min_played_hours max_played_hours average_played_hours min_age max_age\n",
        "1 0                223.1            5.904639             8       50     \n",
-       "  median_age average_age\n",
-       "1 19         20.52062   "
+       "  median_age mode_age average_age\n",
+       "1 19         17       20.52062   "
       ]
      },
      "metadata": {},
@@ -434,8 +434,20 @@
     "                             min_age = min(Age),\n",
     "                             max_age = max(Age),\n",
     "                             median_age = median(Age),\n",
+    "                             mode_age = names(which.max(table(players_cleaned[[7]]))),\n",
     "                             average_age = mean(Age))\n",
     "players_average"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e79bc1-a47a-4c8d-bc7b-6cca84232e9a",
+   "metadata": {},
+   "source": [
+    "**Statistics interpretation:**\n",
+    "- max_played_hours is much higher than average_played_hours, indicating that there may be outliers.\n",
+    "- We noticed that the Minecraft server used in the research autofills the default age to 17 for each player which might have caused the mode_age to be 17.\n",
+    "- average_age being around 20 makes sense since the research participant are mostly university students."
    ]
   },
   {
