--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -247,15 +247,16 @@
     "|`experience`|character|The level of experience of the player (Beginner (least experienced), Amateur, Regular, Veteran, Pro (most experienced))|0|N/A|\n",
     "|`subscribe`|logical|Whether subscribed to a game newsletter or not (True, or False)|0|N/A|\n",
     "|`hashedEmail`|character|Private personal Email information|0|N/A|\n",
-    "|`played_hours`|double|The number of hours played by the player (hours)|0|Max = 1.72733e+12,   Min = 1.7124e+12,   Mean = 1.719201e+12,   Median = 1.7192e+12, Standard Deviation = 3557491589 |\n",
+    "|`played_hours`|double|The number of hours played by the player (hours)|0|Max = 223.1,   Min = 0,   Mean = 5.845918, Standard Deviation = 28.35734 |\n",
     "|`name`|character|The player’s name|0|N/A|\n",
     "|`gender`|character|The player’s gender (male, female, non-binary, agender, two-spirited, prefer not to say, other)|0|N/A|\n",
-    "|`age`|double|The player’s age (years)|2|Max = 50, Min = 8, Mean = 20.52062, Median = 19, Mode = Standard Deviation = 3552813134|\n",
+    "|`age`|double|The player’s age (years)|2|Max = 50, Min = 8, Mean = 20.52062, Median = 19, Mode = 17, Standard Deviation = 6.174667|\n",
     "\n",
     "**ISSUES:** \n",
-    "- There are few visible issues, other than the 2 observations with missing data for both the `end_time` and `original_end_time` variable, which will need to be dealt with during later wrangling/processing.\n",
-    "- This should not have the issues associated with self-reported participant data, since the data is recorded by the server.\n",
-    "- However, since the `start_time` and `original_start_time` variables (same applies to the end time variables) contain the same information, only one is needed for each analysis, depending on needs. For example, visualizations may prefer the use of the `start_time` variable, but any modeling, etc. may benefit from the numerical format of `original_start_time`."
+    "- The `Age` variable appears to be skewed towards younger individuals, with the majority of players around the age of 20, indicating potential age bias in the data.\n",
+    "- The `played_hours` has many values with 0 hours and very small decimal points, so a potential conversion from hours to minutes may be necessary for a deeper and better future analysis.\n",
+    "-  The `played_hours` has many outliers\n",
+    "- session imbalance: some players have many/no sessions"
    ]
   },
   {
@@ -276,6 +277,23 @@
     "- There are few visible issues, other than the 2 observations with missing data for both the `end_time` and `original_end_time` variable, which will need to be dealt with during later wrangling/processing.\n",
     "- This should not have the issues associated with self-reported participant data, since the data is recorded by the server.\n",
     "- However, since the `start_time` and `original_start_time` variables (same applies to the end time variables) contain the same information, only one is needed for each analysis, depending on needs. For example, visualizations may prefer the use of the `start_time` variable, but any modeling, etc. may benefit from the numerical format of `original_start_time`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "470e91b9-c686-46d5-8abd-c6917d9c4d52",
+   "metadata": {},
+   "source": [
+    "#### Indirect issues in the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a1e9799-236d-44b4-ae87-725cf04a8a5f",
+   "metadata": {},
+   "source": [
+    "- The player’s `experience` is not 100% reliable as respondents could report misleading or inaccurate informations\n",
+    "- Bias in data collection (data only collected from mostly UBC, Canada)."
    ]
   },
   {
