added question section

--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -302,6 +302,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ffa2b62-034c-43df-bb0a-c579f408e9cf",
+   "metadata": {},
+   "source": [
+    "## Question\n",
+    "**Broad Question**: What player characteristics and behaviours are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?\n",
+    "\n",
+    "**Specific Question**: Can a player’s age and played hours predict their state of subscribing to a game-related newsletter?\n",
+    "- Only the players.csv file contain the relevant variables to answer the above predictive question."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "19d7f698-77e1-4905-9c66-194db122cddd",
    "metadata": {},
    "source": [
