--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -238,6 +238,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "acc0cecc-9336-44ea-930f-76f8a6f09388",
+   "metadata": {},
+   "source": [
+    "### Data Description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f4f32c7-ef3a-4a69-9a32-a92b2ce6424e",
+   "metadata": {},
+   "source": [
+    "#### Introduction\n",
+    "Minecraft is a 2011 sandbox game developed and published by Swedish video game developer Mojang Studios(Wikipedia contributors, 2025). And it has since been an iconic video game among many young people, ranking number 3 wolrdwide today. \n",
+    "\n",
+    "This study uses data from a UBC Computer Science research group led by Frank Wood. They had set up a MineCraft server, and recorded various player actions data as the players navigate through the server. The data contain information on the player's skill level, demographic, and play sessions. \n",
+    "\n",
+    " #### The data consists of two files:\n",
+    "   1. **players.csv**: a list of data of all unique players\n",
+    "   2. **sessions.csv**: a list of individual play sessions by each player. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4669b8f7-8e70-4805-960f-e13530a1e8ce",
    "metadata": {},
    "source": [
