--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -2239,9 +2239,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81b4442b-48b8-4906-bec2-15734bf7b238",
+   "metadata": {},
+   "source": [
+    "Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14ec5ead-0eec-4fa9-80ba-de79ecd297ed",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "\n",
+    "Wikipedia contributors. (2025, April 2). Minecraft. In Wikipedia, The Free Encyclopedia. https://en.wikipedia.org/w/index.php?title=Minecraft&oldid=1283605041"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9742549c-5c35-47ca-9738-edf4f7b4b3ef",
+   "id": "12e2624f-a01e-4c7a-ad5b-2b07f0ea9982",
    "metadata": {},
    "outputs": [],
    "source": []
