--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -2388,7 +2388,72 @@
    "id": "81b4442b-48b8-4906-bec2-15734bf7b238",
    "metadata": {},
    "source": [
-    "Discussion"
+    "### Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb69f933-d567-4466-9539-dbdcbe051cfa",
+   "metadata": {},
+   "source": [
+    "#### Summary of Results:\n",
+    "\n",
+    "* **Accuracy = 0.53**\n",
+    "  \n",
+    "    Our classifier was approximately 53% accurate, and labeled 26 out of 49 observations correctly.\n",
+    "    This is a relatively low accuracy, since the classifier is only predicting the correct label around half the time, similar to what would be achieved via simple random guessing.\n",
+    "\n",
+    "* **Precision = 0.777**\n",
+    "\n",
+    "  \n",
+    "     When the model predicts that someone will subscribe, it is right about 77.7% of the time. This is relatively high, so while it doesn’t find all the subscribers, the ones it does predict are likely correct. This is good for resource planning: if you act on its prediction, you're less likely to waste resources.\n",
+    "\n",
+    "\n",
+    "* **Recall = 0.388**\n",
+    "\n",
+    "     The model only identifies 38.8% of the people who actually subscribe. In other words, it misses more than half of the true subscribers. This could lead to under-preparing infrastructure or missing outreach opportunities.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2301d078-1d6e-400b-9a75-9933dd039734",
+   "metadata": {},
+   "source": [
+    "#### Expected Findings vs. Outcome:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab7fc59b-a714-4ffa-86d7-7c57c91eed7b",
+   "metadata": {},
+   "source": [
+    "#### Impacts of These findings:\n",
+    "\n",
+    "**1. Recruitment Efforts:**\n",
+    "\n",
+    "Since the model has low recall, it's likely missing many people who would actually subscribe. This means the research team might not reach enough participants, or could overlook players who would’ve been great additions to the study. In the long run, this might lead to a smaller or less diverse player base, which could limit the insights they’re hoping to gain from the data.\n",
+    "\n",
+    "**2. Resource Allocation (licenses, server capacity):**\n",
+    "\n",
+    "The model has strong precision, so when it says someone will subscribe, it's usually right. This helps the team confidently prepare enough licenses or server space for those predicted users. But because a lot of real subscribers may be missed, there’s still a risk of sudden demand from unexpected players. Having some extra resources or a flexible setup could help handle that uncertainty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3997d0ed-656e-46bc-a4b3-54a37ccb99b2",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Future Questions:\n",
+    "\n",
+    "\n",
+    "* Can we improve recall without sacrificing precision too much?\n",
+    "  Might involve adding more features (e.g., game behavior logs, in-game time of day, type of activity) or using more complex models.\n",
+    "\n",
+    "\n",
+    "* Are there patterns among the players who were missed (false negatives)?\n",
+    "  Understanding them could improve outreach strategies or reveal underrepresented player types.\n"
    ]
   },
   {
