add expected findings vs. outcome, change format

--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -2419,7 +2419,8 @@
    "id": "2301d078-1d6e-400b-9a75-9933dd039734",
    "metadata": {},
    "source": [
-    "#### Expected Findings vs. Outcome:"
+    "#### Expected Findings vs. Outcome:\n",
+    "The classifier showed relatively low accuracy and recall, which was expected from the exploratory analyses. The exploratory visualization comparing age to played hours showed a high degree of overlap between players who did/didn’t subscribe. In other words, the majority of data points were located in a region where a similar proportion of their neighbours belonged to either class, which would make it difficult for the model to predict the subscription status. "
    ]
   },
   {
@@ -2448,11 +2449,12 @@
     "#### Future Questions:\n",
     "\n",
     "\n",
-    "* Can we improve recall without sacrificing precision too much?\n",
+    "**Question 1:**  \n",
+    "Can we improve recall without sacrificing precision too much?  \n",
     "  Might involve adding more features (e.g., game behavior logs, in-game time of day, type of activity) or using more complex models.\n",
     "\n",
-    "\n",
-    "* Are there patterns among the players who were missed (false negatives)?\n",
+    "**Question 2:**  \n",
+    "Are there patterns among the players who were missed (false negatives)?  \n",
     "  Understanding them could improve outreach strategies or reveal underrepresented player types.\n"
    ]
   },
