added plot descritions

--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -1006,6 +1006,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6610e280-cb8e-40bf-890a-ba9706667f2e",
+   "metadata": {},
+   "source": [
+    "**Plot Description**: The plot shows that players who subscribe to game-related newsletters tend to be younger, with a median age of around 17, while non-subscribers have a higher median age of approximately 22. Both groups have similar extent of age variations. There are four noticeable outliers in the non-subscriber group with significantly higher ages. This suggests that younger players may be more likely to subscribe to game-related newsletters."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "eebd69da-cc20-464f-b462-4f19e0969db7",
@@ -1508,6 +1516,14 @@
     "                        labs(x = \"Subscription Status\", y = \"Game Played Hours\", fill = \"Subscription\\nStatus\", title = \"Figure 2: played hours vs. Subscription Status\")+\n",
     "                        theme(text = element_text(size = 15))\n",
     "played_hours_boxplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3a45f7d-8d38-4d3a-922f-293380291973",
+   "metadata": {},
+   "source": [
+    "**Plot Description**: Generally, this graph suggested a potential relationship between played hours and subscription status. It is observed here that the subscribed group have a higher median played hours compared to unsubscribed group. Additionally, the subscribed group shows greater variation in played hours, with a very high outlier."
    ]
   },
   {
