--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20498635-7b66-4f46-b992-5176bd148b2e",
+   "metadata": {},
+   "source": [
+    "Names: Amanda Huang, Yiwen Qiu, Sheena Jiang, Nina Tsai"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "d47a4e34-e2ce-4801-990e-9dfc1c646f2a",
