--- a/GroupProject(37).ipynb
+++ b/GroupProject(37).ipynb
@@ -251,12 +251,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4669b8f7-8e70-4805-960f-e13530a1e8ce",
+   "id": "7b76b221-7b13-4c53-affc-53da3c77a986",
    "metadata": {},
    "source": [
     "#### Summary table #1 of `players.csv`:\n",
+    "\n",
     "- Number of variables: **7**\n",
     "- Number of observations: **195**\n",
+    "  \n",
     "| variable | type | meaning | # of missing observations | summary statistics (if applicable) |\n",
     "|--|--|--|--|--|\n",
     "|`experience`|character|The level of experience of the player (Beginner (least experienced), Amateur, Regular, Veteran, Pro (most experienced))|0|N/A|\n",
@@ -265,7 +267,16 @@
     "|`played_hours`|double|The number of hours played by the player (hours)|0|Max = 223.1,   Min = 0,   Mean = 5.845918, Standard Deviation = 28.35734 |\n",
     "|`name`|character|The player’s name|0|N/A|\n",
     "|`gender`|character|The player’s gender (male, female, non-binary, agender, two-spirited, prefer not to say, other)|0|N/A|\n",
-    "|`age`|double|The player’s age (years)|2|Max = 50, Min = 8, Mean = 20.52062, Median = 19, Mode = 17, Standard Deviation = 6.174667|\n",
+    "|`age`|double|The player’s age (years)|2|Max = 50, Min = 8, Mean = 20.52062, Median = 19, Mode = 17, Standard Deviation = 6.174667|\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4669b8f7-8e70-4805-960f-e13530a1e8ce",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
     "\n",
     "**ISSUES:** \n",
     "- The `Age` variable appears to be skewed towards younger individuals, with the majority of players around the age of 20, indicating potential age bias in the data.\n",
@@ -280,16 +291,24 @@
    "metadata": {},
    "source": [
     "#### Summary table #2 of `sessions.csv`:\n",
+    "\n",
     "- Number of variables: **5**\n",
     "- Number of observations: **1534**\n",
+    "\n",
     "| variable | type | meaning | # of missing observations | summary statistics (if applicable) |\n",
     "|--|--|--|--|--|\n",
     "|`hashedEmail`|character|Private personal Email information|0|N/A|\n",
     "|`start_time`|character|The start time, in human-readable timestamp|0|N/A|\n",
     "|`end_time`|character|The end time, in human-readable timestamp|0|N/A|\n",
     "|`original_start_time`|double|The start time and date of the play session in Unix time|0|Max = 1.72733e+12,   Min = 1.7124e+12,   Mean = 1.719201e+12,   Median = 1.7192e+12, Standard Deviation = 3557491589 |\n",
-    "|`original_end_time`|double|The end time and date of the play session in Unix time|2|Max = 1.72734e+12, Min = 1.7124e+12, Mean = 1.719196e+12, Median = 1.71918e+12, Standard Deviation = 3552813134|\n",
-    "\n",
+    "|`original_end_time`|double|The end time and date of the play session in Unix time|2|Max = 1.72734e+12, Min = 1.7124e+12, Mean = 1.719196e+12, Median = 1.71918e+12, Standard Deviation = 3552813134|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6244e5fb-8cde-4178-a160-957146a0e776",
+   "metadata": {},
+   "source": [
     "**ISSUES:** \n",
     "- There are few visible issues, other than the 2 observations with missing data for both the `end_time` and `original_end_time` variable, which will need to be dealt with during later wrangling/processing.\n",
     "- This should not have the issues associated with self-reported participant data, since the data is recorded by the server.\n",
